welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:25: error: ';' expected but ',' found.
il faut faire quatre pas en avant, deux pas à gauche, quatre pas à droite, deux pas à droite, et quatre pas à gauche 
                                 ^